@@ -16,16 +16,16 @@
  */
 package org.keycloak.services.clientregistration.oidc;
 
-import org.jboss.logging.Logger;
-import org.keycloak.OAuth2Constants;
 import org.keycloak.common.util.Time;
 import org.keycloak.models.ClientModel;
 import org.keycloak.models.ClientSecretConstants;
+import org.keycloak.models.KeycloakContext;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.ProtocolMapperModel;
+import org.keycloak.models.RealmModel;
 import org.keycloak.models.utils.ModelToRepresentation;
 import org.keycloak.models.utils.RepresentationToModel;
-import org.keycloak.protocol.oidc.OIDCAdvancedConfigWrapper;
+import org.keycloak.protocol.oidc.OIDCLoginProtocol;
 import org.keycloak.protocol.oidc.mappers.AbstractPairwiseSubMapper;
 import org.keycloak.protocol.oidc.mappers.PairwiseSubMapperHelper;
 import org.keycloak.protocol.oidc.mappers.SHA256PairwiseSubMapper;
@@ -35,21 +35,28 @@ import org.keycloak.representations.idm.ProtocolMapperRepresentation;
 import org.keycloak.representations.oidc.OIDCClientRepresentation;
 import org.keycloak.services.ErrorResponseException;
 import org.keycloak.services.ServicesLogger;
+import org.keycloak.services.Urls;
 import org.keycloak.services.clientregistration.AbstractClientRegistrationProvider;
 import org.keycloak.services.clientregistration.ClientRegistrationException;
 import org.keycloak.services.clientregistration.ErrorCodes;
+import org.keycloak.services.cors.Cors;
+import org.keycloak.urls.UrlType;
 
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.OPTIONS;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+
 import java.net.URI;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
@@ -59,10 +66,19 @@ import java.util.stream.Collectors;
  */
 public class OIDCClientRegistrationProvider extends AbstractClientRegistrationProvider {
 
-    private static final Logger logger = Logger.getLogger(OIDCClientRegistrationProvider.class);
-
     public OIDCClientRegistrationProvider(KeycloakSession session) {
         super(session);
+    }
+
+    @OPTIONS
+    public Response preflight() {
+        return Cors.builder().auth().preflight().allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS").add(Response.ok());
+    }
+
+    @OPTIONS
+    @Path("{clientId}")
+    public Response preflightClient() {
+        return preflight();
     }
 
     @POST
@@ -75,15 +91,6 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
 
         try {
             ClientRepresentation client = DescriptionConverter.toInternal(session, clientOIDC);
-            List<String> grantTypes = clientOIDC.getGrantTypes();
-
-            if (grantTypes != null && grantTypes.contains(OAuth2Constants.UMA_GRANT_TYPE)) {
-                client.setAuthorizationServicesEnabled(true);
-            }
-
-            if (!(grantTypes == null || grantTypes.contains(OAuth2Constants.REFRESH_TOKEN))) {
-                OIDCAdvancedConfigWrapper.fromClientRepresentation(client).setUseRefreshToken(false);
-            }
 
             OIDCClientRegistrationContext oidcContext = new OIDCClientRegistrationContext(session, client, this, clientOIDC);
             client = create(oidcContext);
@@ -94,10 +101,10 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
 
             validateClient(clientModel, clientOIDC, true);
 
-            URI uri = session.getContext().getUri().getAbsolutePathBuilder().path(client.getClientId()).build();
+            URI uri = getRegistrationClientUri(clientModel);
             clientOIDC = DescriptionConverter.toExternalResponse(session, client, uri);
             clientOIDC.setClientIdIssuedAt(Time.currentTime());
-            return Response.created(uri).entity(clientOIDC).build();
+            return cors().add(Response.created(uri).entity(clientOIDC));
         } catch (ClientRegistrationException cre) {
             ServicesLogger.LOGGER.clientRegistrationException(cre.getMessage());
             throw new ErrorResponseException(ErrorCodes.INVALID_CLIENT_METADATA, "Client metadata invalid", Response.Status.BAD_REQUEST);
@@ -112,8 +119,8 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
 
         ClientRepresentation clientRepresentation = get(client);
 
-        OIDCClientRepresentation clientOIDC = DescriptionConverter.toExternalResponse(session, clientRepresentation, session.getContext().getUri().getRequestUri());
-        return Response.ok(clientOIDC).build();
+        OIDCClientRepresentation clientOIDC = DescriptionConverter.toExternalResponse(session, clientRepresentation, getRegistrationClientUri(client));
+        return cors().add(Response.ok(clientOIDC));
     }
 
     @PUT
@@ -123,6 +130,13 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
     public Response updateOIDC(@PathParam("clientId") String clientId, OIDCClientRepresentation clientOIDC) {
         try {
             ClientRepresentation client = DescriptionConverter.toInternal(session, clientOIDC);
+
+            if (clientOIDC.getScope() != null) {
+                ClientModel oldClient = session.getContext().getRealm().getClientById(clientOIDC.getClientId());
+                Collection<String> defaultClientScopes = oldClient.getClientScopes(true).keySet();
+                client.setDefaultClientScopes(new ArrayList<>(defaultClientScopes));
+            }
+
             OIDCClientRegistrationContext oidcContext = new OIDCClientRegistrationContext(session, client, this, clientOIDC);
             client = update(clientId, oidcContext);
 
@@ -136,9 +150,9 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
 
             validateClient(clientModel, clientOIDC, false);
 
-            URI uri = session.getContext().getUri().getAbsolutePathBuilder().path(client.getClientId()).build();
+            URI uri = getRegistrationClientUri(clientModel);
             clientOIDC = DescriptionConverter.toExternalResponse(session, client, uri);
-            return Response.ok(clientOIDC).build();
+            return cors().add(Response.ok(clientOIDC));
         } catch (ClientRegistrationException cre) {
             ServicesLogger.LOGGER.clientRegistrationException(cre.getMessage());
             throw new ErrorResponseException(ErrorCodes.INVALID_CLIENT_METADATA, "Client metadata invalid", Response.Status.BAD_REQUEST);
@@ -147,8 +161,13 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
 
     @DELETE
     @Path("{clientId}")
-    public void deleteOIDC(@PathParam("clientId") String clientId) {
+    public Response deleteOIDC(@PathParam("clientId") String clientId) {
         delete(clientId);
+        return cors().add(Response.noContent());
+    }
+
+    private Cors cors() {
+        return Cors.builder().failOnInvalidOrigin().auth().addAllowedOrigins(getAllowedOrigins());
     }
 
     private void updatePairwiseSubMappers(ClientModel clientModel, SubjectType subjectType, String sectorIdentifierUri) {
@@ -164,7 +183,7 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
                 } else {
                     return false;
                 }
-            }).collect(Collectors.toList()).forEach((ProtocolMapperModel mapping) -> {
+            }).toList().forEach((ProtocolMapperModel mapping) -> {
                 PairwiseSubMapperHelper.setSectorIdentifierUri(mapping, sectorIdentifierUri);
                 clientModel.updateProtocolMapper(mapping);
             });
@@ -179,7 +198,7 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
             // Rather find and remove all pairwise mappers
             clientModel.getProtocolMappersStream()
                     .filter(mapperRep -> mapperRep.getProtocolMapper().endsWith(AbstractPairwiseSubMapper.PROVIDER_ID_SUFFIX))
-                    .collect(Collectors.toList())
+                    .toList()
                     .forEach(clientModel::removeProtocolMapper);
         }
     }
@@ -188,5 +207,12 @@ public class OIDCClientRegistrationProvider extends AbstractClientRegistrationPr
         List<ProtocolMapperRepresentation> mappings =
                 clientModel.getProtocolMappersStream().map(ModelToRepresentation::toRepresentation).collect(Collectors.toList());
         rep.setProtocolMappers(mappings);
+    }
+
+    private URI getRegistrationClientUri(ClientModel client) {
+        KeycloakContext context = session.getContext();
+        RealmModel realm = context.getRealm();
+        URI backendUri = context.getUri(UrlType.BACKEND).getBaseUri();
+        return Urls.clientRegistration(backendUri, realm.getName(), OIDCLoginProtocol.LOGIN_PROTOCOL, client.getClientId());
     }
 }
