@@ -1,9 +1,7 @@
 package org.keycloak.services.x509;
 
-import java.io.UnsupportedEncodingException;
-import java.security.GeneralSecurityException;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidAlgorithmParameterException;
-import java.security.KeyStore;
 import java.security.NoSuchAlgorithmException;
 import java.security.NoSuchProviderException;
 import java.security.cert.CertPath;
@@ -19,24 +17,21 @@ import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 
 import org.jboss.logging.Logger;
 import org.jboss.logging.Logger.Level;
-import org.jboss.resteasy.spi.HttpRequest;
+import org.keycloak.http.HttpRequest;
 import org.keycloak.common.crypto.CryptoIntegration;
 import org.keycloak.common.util.PemException;
 import org.keycloak.common.util.PemUtils;
-import org.keycloak.models.KeycloakSession;
-import org.keycloak.models.KeycloakSessionFactory;
-import org.keycloak.truststore.TruststoreProvider;
-import org.keycloak.truststore.TruststoreProviderFactory;
 
 /**
  * The NGINX Provider extract end user X.509 certificate send during TLS mutual authentication,
  * and forwarded in an http header.
  *
- * NGINX configuration must have : 
+ * NGINX configuration must have :
  * <code>
  * server {
  *    ...
@@ -62,20 +57,30 @@ public class NginxProxySslClientCertificateLookup extends AbstractClientCertific
 
     private static final Logger log = Logger.getLogger(NginxProxySslClientCertificateLookup.class);
 
-    private static boolean isTruststoreLoaded = false;
+    private final boolean isTruststoreLoaded;
+    private final boolean certIsUrlEncoded;
+    private final Set<X509Certificate> trustedRootCerts;
+    private final Set<X509Certificate> intermediateCerts;
 
-    private static KeyStore  truststore = null;
-    private static Set<X509Certificate> trustedRootCerts = null;
-    private static Set<X509Certificate> intermediateCerts = null;
 
-
-    public NginxProxySslClientCertificateLookup(String sslCientCertHttpHeader,
+    public NginxProxySslClientCertificateLookup(String sslClientCertHttpHeader,
                                                 String sslCertChainHttpHeaderPrefix,
                                                 int certificateChainLength,
-                                                KeycloakSession kcsession) {
-        super(sslCientCertHttpHeader, sslCertChainHttpHeaderPrefix, certificateChainLength);
+                                                Set<X509Certificate> intermediateCerts,
+                                                Set<X509Certificate> trustedRootCerts,
+                                                boolean isTruststoreLoaded,
+                                                boolean certIsUrlEncoded
+                                                ) {
+        super(sslClientCertHttpHeader, sslCertChainHttpHeaderPrefix, certificateChainLength);
 
-        if (!loadKeycloakTrustStore(kcsession)) {
+      Objects.requireNonNull(intermediateCerts,"requireNonNull intermediateCerts");
+      Objects.requireNonNull(trustedRootCerts,"requireNonNull trustedRootCerts");
+      this.intermediateCerts = intermediateCerts;
+      this.trustedRootCerts = trustedRootCerts;
+      this.isTruststoreLoaded = isTruststoreLoaded;
+      this.certIsUrlEncoded = certIsUrlEncoded;
+
+        if (!this.isTruststoreLoaded) {
             log.warn("Keycloak Truststore is null or empty, but it's required for NGINX x509cert-lookup provider");
             log.warn("   see Keycloak documentation here : https://www.keycloak.org/docs/latest/server_installation/index.html#_truststore");
         }
@@ -105,10 +110,8 @@ public class NginxProxySslClientCertificateLookup extends AbstractClientCertific
             log.warn("End user TLS Certificate is NULL! ");
             return null;
         }
-        try {
-            pem = java.net.URLDecoder.decode(pem, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            log.error("Cannot URL decode the end user TLS Certificate : " + pem,e);
+        if (certIsUrlEncoded) {
+            pem = java.net.URLDecoder.decode(pem, StandardCharsets.UTF_8);
         }
 
         if (pem.startsWith(PemUtils.BEGIN_CERT)) {
@@ -119,54 +122,46 @@ public class NginxProxySslClientCertificateLookup extends AbstractClientCertific
     }
 
     @Override
-    public X509Certificate[] getCertificateChain(HttpRequest httpRequest) throws GeneralSecurityException {
-        List<X509Certificate> chain = new ArrayList<>();
+    protected void buildChain(HttpRequest httpRequest, List<X509Certificate> chain, X509Certificate clientCert) {
+        log.debugf("End user certificate found : Subject DN=[%s]  SerialNumber=[%s]", clientCert.getSubjectX500Principal(), clientCert.getSerialNumber());
 
-        // Get the client certificate
-        X509Certificate clientCert = getCertificateFromHttpHeader(httpRequest, sslClientCertHttpHeader);
-
-        if (clientCert != null) {
-            log.debugf("End user certificate found : Subject DN=[%s]  SerialNumber=[%s]", clientCert.getSubjectDN(), clientCert.getSerialNumber());
-
-            // Rebuilding the end user certificate chain using Keycloak Truststore
-            X509Certificate[] certChain = buildChain(clientCert);
-            if (certChain == null || certChain.length == 0) {
-                log.info("Impossible to rebuild end user cert chain : client certificate authentication will fail." );
-                chain.add(clientCert);
-            } else {
-                for (X509Certificate cacert : certChain) {
-                    chain.add(cacert);
-                    log.debugf("Rebuilded user cert chain DN : %s", cacert.getSubjectDN().toString() );
-                }
+        // Rebuilding the end user certificate chain using Keycloak Truststore
+        X509Certificate[] certChain = buildChain(clientCert);
+        if (certChain == null || certChain.length == 0) {
+            log.info("Impossible to rebuild end user cert chain : client certificate authentication will fail." );
+            chain.add(clientCert);
+        } else {
+            for (X509Certificate caCert : certChain) {
+                chain.add(caCert);
+                log.debugf("Rebuilded user cert chain DN : %s", caCert.getSubjectX500Principal());
             }
         }
-        return chain.toArray(new X509Certificate[0]);
     }
 
     /**
-     *  As NGINX cannot actually send the CA Chain in http header(s), 
+     *  As NGINX cannot actually send the CA Chain in http header(s),
      *  we are rebuilding here the end user certificate chain with Keycloak truststore.
      *  <br>
      *  Please note that Keycloak truststore must contain root and intermediate CA's certificates.
-     * @param end_user_auth_cert
+     * @param endUserAuthCert
      * @return
      */
-    public X509Certificate[] buildChain(X509Certificate end_user_auth_cert) {
+    private X509Certificate[] buildChain(X509Certificate endUserAuthCert) {
 
-        X509Certificate[] user_cert_chain = null;
+        X509Certificate[] userCertChain = new X509Certificate[0];
 
         try {
 
             // No truststore : no way!
-            if (isTruststoreLoaded == false) {
+            if (!isTruststoreLoaded) {
                 log.warn("Keycloak Truststore is null, but it is required !");
                 log.warn("  see https://www.keycloak.org/docs/latest/server_installation/index.html#_truststore");
-                return null;
+                return userCertChain;
             }
 
             // Create the selector that specifies the starting certificate
             X509CertSelector selector = new X509CertSelector();
-            selector.setCertificate(end_user_auth_cert);
+            selector.setCertificate(endUserAuthCert);
 
             // Create the trust anchors (set of root CA certificates)
             Set<TrustAnchor> trustAnchors = new HashSet<TrustAnchor>();
@@ -184,9 +179,9 @@ public class NginxProxySslClientCertificateLookup extends AbstractClientCertific
             pkixParams.setMaxPathLength(certificateChainLength);
 
             // Adding the list of intermediate certificates + end user certificate
-            intermediateCerts.add(end_user_auth_cert);
-            CollectionCertStoreParameters intermediateCA_userCert = new CollectionCertStoreParameters(intermediateCerts);
-            CertStore intermediateCertStore = CryptoIntegration.getProvider().getCertStore(intermediateCA_userCert);
+            intermediateCerts.add(endUserAuthCert);
+            CollectionCertStoreParameters intermediateCAUserCert = new CollectionCertStoreParameters(intermediateCerts);
+            CertStore intermediateCertStore = CryptoIntegration.getProvider().getCertStore(intermediateCAUserCert);
             pkixParams.addCertStore(intermediateCertStore);
 
             // Build and verify the certification chain (revocation status excluded)
@@ -194,9 +189,9 @@ public class NginxProxySslClientCertificateLookup extends AbstractClientCertific
             CertPath certPath = certPathBuilder.build(pkixParams).getCertPath();
             log.debug("Certification path building OK, and contains " + certPath.getCertificates().size() + " X509 Certificates");
 
-            user_cert_chain = convertCertPathtoX509CertArray( certPath );
+            userCertChain = convertCertPathToX509CertArray(certPath);
 
-        } catch (NoSuchAlgorithmException e) {
+        } catch (NoSuchAlgorithmException | InvalidAlgorithmParameterException | NoSuchProviderException e) {
             log.error(e.getLocalizedMessage(),e);
         } catch (CertPathBuilderException e) {
             if (log.isEnabled(Level.TRACE)) {
@@ -204,64 +199,32 @@ public class NginxProxySslClientCertificateLookup extends AbstractClientCertific
             } else {
                 log.warn(e.getLocalizedMessage());
             }
-        } catch (InvalidAlgorithmParameterException e) {
-            log.error(e.getLocalizedMessage(),e);
-        } catch (NoSuchProviderException e) {
-            log.error(e.getLocalizedMessage(),e);
         } finally {
             if (isTruststoreLoaded) {
                 //Remove end user certificate
-                intermediateCerts.remove(end_user_auth_cert);
+                intermediateCerts.remove(endUserAuthCert);
             }
         }
 
-        return user_cert_chain;
+        return userCertChain;
     }
 
 
-    public X509Certificate[] convertCertPathtoX509CertArray( CertPath certPath ) {
+    private X509Certificate[] convertCertPathToX509CertArray(CertPath certPath ) {
 
-        X509Certificate[] x509certchain = null;
-
-        if (certPath != null) {
-            List<X509Certificate> trustedX509Chain = new ArrayList<X509Certificate>();
-            for (Certificate certificate : certPath.getCertificates()) {
-                if (certificate instanceof X509Certificate) {
-                    trustedX509Chain.add((X509Certificate) certificate);
-                }
-            }
-            x509certchain = trustedX509Chain.toArray(new X509Certificate[0]);
+        X509Certificate[] x509certChain = new X509Certificate[0];
+        if (certPath == null){
+          return x509certChain;
         }
 
-        return x509certchain;
-
-    }
-
-    /**  Loading truststore @ first login
-     *
-     * @param kcsession
-     * @return
-     */
-    public boolean loadKeycloakTrustStore(KeycloakSession kcsession) {
-
-        if (!isTruststoreLoaded) {
-            log.debug(" Loading Keycloak truststore ...");
-            KeycloakSessionFactory factory = kcsession.getKeycloakSessionFactory();
-            TruststoreProviderFactory truststoreFactory = (TruststoreProviderFactory) factory.getProviderFactory(TruststoreProvider.class, "file");
-
-            TruststoreProvider provider = truststoreFactory.create(kcsession);
-
-            if (provider != null && provider.getTruststore() != null) {
-                truststore = provider.getTruststore();
-                trustedRootCerts = new HashSet<>(provider.getRootCertificates().values());
-                intermediateCerts = new HashSet<>(provider.getIntermediateCertificates().values());
-                log.debug("Keycloak truststore loaded for NGINX x509cert-lookup provider.");
-
-                isTruststoreLoaded = true;
+        List<X509Certificate> trustedX509Chain = new ArrayList<X509Certificate>();
+        for (Certificate certificate : certPath.getCertificates()) {
+            if (certificate instanceof X509Certificate) {
+                trustedX509Chain.add((X509Certificate) certificate);
             }
         }
 
-        return isTruststoreLoaded;
-    }
+        return trustedX509Chain.toArray(x509certChain);
 
+    }
 }
