@@ -22,17 +22,17 @@ import org.keycloak.broker.oidc.AbstractOAuth2IdentityProvider;
 import org.keycloak.broker.oidc.mappers.AbstractJsonUserAttributeMapper;
 import org.keycloak.broker.provider.BrokeredIdentityContext;
 import org.keycloak.broker.provider.IdentityBrokerException;
-import org.keycloak.broker.provider.util.SimpleHttp;
 import org.keycloak.broker.social.SocialIdentityProvider;
 import org.keycloak.events.EventBuilder;
+import org.keycloak.http.simple.SimpleHttp;
+import org.keycloak.http.simple.SimpleHttpRequest;
 import org.keycloak.models.KeycloakSession;
 
 import java.io.StringWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 
 /**
@@ -67,23 +67,22 @@ public class StackoverflowIdentityProvider extends AbstractOAuth2IdentityProvide
 	}
 
 	@Override
-	protected SimpleHttp buildUserInfoRequest(String subjectToken, String userInfoUrl) {
+	protected SimpleHttpRequest buildUserInfoRequest(String subjectToken, String userInfoUrl) {
 		String URL = PROFILE_URL + "&access_token=" + subjectToken + "&key=" + getConfig().getKey();
-		return SimpleHttp.doGet(URL, session);
+		return SimpleHttp.create(session).doGet(URL);
 	}
 
 	@Override
 	protected BrokeredIdentityContext extractIdentityFromProfile(EventBuilder event, JsonNode node) {
 		JsonNode profile = node.get("items").get(0);
 
-		BrokeredIdentityContext user = new BrokeredIdentityContext(getJsonProperty(profile, "user_id"));
+		BrokeredIdentityContext user = new BrokeredIdentityContext(getJsonProperty(profile, "user_id"), getConfig());
 
 		String username = extractUsernameFromProfileURL(getJsonProperty(profile, "link"));
 		user.setUsername(username);
 		user.setName(unescapeHtml3(getJsonProperty(profile, "display_name")));
 		// email is not provided
 		// user.setEmail(getJsonProperty(profile, "email"));
-		user.setIdpConfig(getConfig());
 		user.setIdp(this);
 
 		AbstractJsonUserAttributeMapper.storeUserProfileForMapper(user, profile, getConfig().getAlias());
@@ -100,7 +99,7 @@ public class StackoverflowIdentityProvider extends AbstractOAuth2IdentityProvide
 			if (log.isDebugEnabled()) {
 				log.debug("StackOverflow profile request to: " + URL);
 			}
-			return extractIdentityFromProfile(null, SimpleHttp.doGet(URL, session).asJson());
+			return extractIdentityFromProfile(null, SimpleHttp.create(session).doGet(URL).asJson());
 		} catch (Exception e) {
 			throw new IdentityBrokerException("Could not obtain user profile from Stackoverflow: " + e.getMessage(), e);
 		}
@@ -119,7 +118,7 @@ public class StackoverflowIdentityProvider extends AbstractOAuth2IdentityProvide
 					}
 					String[] pe = path.split("/");
 					if (pe.length >= 3) {
-						return URLDecoder.decode(pe[2], "UTF-8");
+						return URLDecoder.decode(pe[2], StandardCharsets.UTF_8);
 					} else {
 						log.warn("Stackoverflow profile URL path is without third part: " + profileURL);
 					}
