@@ -31,17 +31,18 @@ import org.keycloak.events.Errors;
 import org.keycloak.events.EventType;
 import org.keycloak.models.Constants;
 import org.keycloak.models.RealmModel;
+import org.keycloak.models.UserModel;
 import org.keycloak.models.UserModel.RequiredAction;
+import org.keycloak.models.utils.KeycloakModelUtils;
 import org.keycloak.representations.idm.EventRepresentation;
 import org.keycloak.representations.idm.RealmRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.services.managers.AuthenticationSessionManager;
 import org.keycloak.sessions.RootAuthenticationSessionModel;
 import org.keycloak.testsuite.AssertEvents;
 import org.keycloak.testsuite.AbstractTestRealmKeycloakTest;
 import org.keycloak.testsuite.admin.ApiUtil;
 import org.keycloak.testsuite.arquillian.AuthServerTestEnricher;
-import org.keycloak.testsuite.arquillian.annotation.DisableFeature;
-import org.keycloak.testsuite.auth.page.AuthRealm;
 import org.keycloak.testsuite.cluster.AuthenticationSessionFailoverClusterTest;
 import org.keycloak.testsuite.pages.AppPage;
 import org.keycloak.testsuite.pages.AppPage.RequestType;
@@ -51,37 +52,43 @@ import org.keycloak.testsuite.pages.InfoPage;
 import org.keycloak.testsuite.pages.LoginPage;
 import org.keycloak.testsuite.pages.RegisterPage;
 import org.keycloak.testsuite.pages.VerifyEmailPage;
+import org.keycloak.testsuite.pages.VerifyProfilePage;
 import org.keycloak.testsuite.updaters.UserAttributeUpdater;
 import org.keycloak.testsuite.util.GreenMailRule;
 import org.keycloak.testsuite.util.InfinispanTestTimeServiceRule;
-import org.keycloak.testsuite.util.MailUtils;
 import org.keycloak.testsuite.util.SecondBrowser;
-import org.keycloak.testsuite.util.UserActionTokenBuilder;
 import org.keycloak.testsuite.util.UserBuilder;
+import org.keycloak.testsuite.util.AccountHelper;
+import org.keycloak.testsuite.util.TestAppHelper;
+import org.keycloak.testsuite.util.UserActionTokenBuilder;
+import org.keycloak.testsuite.util.MailUtils;
 
 import java.io.Closeable;
-import javax.mail.MessagingException;
-import javax.mail.internet.MimeMessage;
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.MimeMessage;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.hamcrest.Matchers;
 import org.junit.Assume;
+import org.keycloak.testsuite.util.oauth.OAuthClient;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 
+import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+import static org.keycloak.authentication.requiredactions.VerifyEmail.EMAIL_RESEND_COOLDOWN_KEY_PREFIX;
 
 /**
  * @author <a href="mailto:sthorger@redhat.com">Stian Thorgersen</a>
  */
-@DisableFeature(value = Profile.Feature.ACCOUNT2, skipRestart = true) // TODO remove this (KEYCLOAK-16228)
 public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeycloakTest {
 
     @Rule
@@ -101,6 +108,9 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
     @Page
     protected VerifyEmailPage verifyEmailPage;
+
+    @Page
+    protected VerifyProfilePage verifyProfilePage;
 
     @Page
     protected RegisterPage registerPage;
@@ -131,15 +141,30 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         ApiUtil.removeUserByUsername(testRealm(), "test-user@localhost");
         UserRepresentation user = UserBuilder.create().enabled(true)
                 .username("test-user@localhost")
+                .firstName("test-user")
+                .lastName("test-user")
+                .emailVerified(false)
                 .email("test-user@localhost").build();
         testUserId = ApiUtil.createUserAndResetPasswordWithAdminClient(testRealm(), user, "password");
+
+        clearCooldownForUser();
+    }
+
+    private void clearCooldownForUser() {
+        String cooldownKey = EMAIL_RESEND_COOLDOWN_KEY_PREFIX + testUserId;
+        testingClient.server().run(session -> session.singleUseObjects().remove(cooldownKey));
+    }
+
+    protected boolean removeVerifyProfileAtImport() {
+        // in this test verify profile is enabled
+        return false;
     }
 
     /**
      * see KEYCLOAK-4163
      */
     @Test
-    public void verifyEmailConfig() throws IOException, MessagingException {
+    public void verifyEmailConfig() throws MessagingException {
 
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
@@ -158,7 +183,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExisting() throws IOException, MessagingException {
+    public void verifyEmailExisting() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -168,7 +193,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getReceivedMessages()[0];
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         AssertEvents.ExpectedEvent emailEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL).detail("email", "test-user@localhost");
         EventRepresentation sendEvent = emailEvent.assertEvent();
@@ -190,7 +215,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailRegister() throws IOException, MessagingException {
+    public void verifyEmailRegister() throws IOException {
         loginPage.open();
         loginPage.clickRegister();
         registerPage.register("firstName", "lastName", "email@mail.com", "verifyEmail", "password", "password");
@@ -206,7 +231,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         EventRepresentation sendEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL).user(userId).detail(Details.USERNAME, "verifyemail").detail("email", "email@mail.com").assertEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         driver.navigate().to(verificationUrl.trim());
 
@@ -223,7 +248,81 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResend() throws IOException, MessagingException {
+    public void verifyEmailRegisterSetLocale() throws IOException {
+        RealmRepresentation realm = testRealm().toRepresentation();
+        realm.setInternationalizationEnabled(true);
+        realm.setSupportedLocales(Set.of("en", "pt"));
+        testRealm().update(realm);
+        loginPage.open();
+        loginPage.clickRegister();
+        loginPage.openLanguage("Português");
+        registerPage.register("firstName", "lastName", "locale@mail.com", "locale", "password", "password");
+
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        MimeMessage message = greenMail.getReceivedMessages()[0];
+        String verificationUrl = getEmailLink(message);
+
+        driver.manage().deleteAllCookies();
+        driver.navigate().to(verificationUrl.trim());
+        assertTrue(driver.getPageSource().contains("Confirme a validade do endereço"));
+    }
+
+    @Test
+    public void verifyEmailFromAnotherAccountWhenUserIsAuthenticated() throws Exception {
+        loginPage.open();
+        loginPage.clickRegister();
+        String username1 = KeycloakModelUtils.generateId();
+        registerPage.register("firstName", "lastName", username1 + "@mail.com", username1, "password", "password");
+        verifyEmailPage.assertCurrent();
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        MimeMessage message = greenMail.getReceivedMessages()[0];
+        String verificationLink1 = getEmailLink(message);
+
+        loginPage.open();
+        loginPage.clickRegister();
+        String username2 = KeycloakModelUtils.generateId();
+        registerPage.register("firstName", "lastName", username2 + "@mail.com", username2, "password", "password");
+        verifyEmailPage.assertCurrent();
+        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        message = greenMail.getReceivedMessages()[1];
+        String verificationLink2 = getEmailLink(message);
+        driver.navigate().to(verificationLink2.trim());
+        Assert.assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        driver.navigate().to(verificationLink1.trim());
+        assertTrue(errorPage.getError().contains("You are already authenticated as different user"));
+        UserRepresentation user1 = testRealm().users().search(username1).get(0);
+        UserRepresentation user2 = testRealm().users().search(username2).get(0);
+        assertFalse(user1.isEmailVerified());
+        assertTrue(user2.isEmailVerified());
+    }
+
+    @Test
+    public void verifyEmailFromAnotherAccountAfterEmalIsVerified() throws Exception {
+        loginPage.open();
+        loginPage.clickRegister();
+        String username1 = KeycloakModelUtils.generateId();
+        registerPage.register("firstName", "lastName", username1 + "@mail.com", username1, "password", "password");
+        verifyEmailPage.assertCurrent();
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        MimeMessage message = greenMail.getReceivedMessages()[0];
+        String verificationLink1 = getEmailLink(message);
+
+        loginPage.open();
+        loginPage.clickRegister();
+        String username2 = KeycloakModelUtils.generateId();
+        registerPage.register("firstName", "lastName", username2 + "@mail.com", username2, "password", "password");
+        verifyEmailPage.assertCurrent();
+        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        message = greenMail.getReceivedMessages()[1];
+        String verificationLink2 = getEmailLink(message);
+
+        driver.navigate().to(verificationLink1.trim());
+        driver.navigate().to(verificationLink2.trim());
+        assertTrue(errorPage.getError().contains("You are already authenticated as different user"));
+    }
+
+    @Test
+    public void verifyEmailResend() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -236,6 +335,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
           .assertEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
@@ -247,7 +347,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         Assert.assertEquals(2, greenMail.getReceivedMessages().length);
 
         MimeMessage message = greenMail.getLastReceivedMessage();
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         driver.navigate().to(verificationUrl.trim());
 
@@ -265,7 +365,29 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResendWithRefreshes() throws IOException, MessagingException {
+    public void verifyEmailResendTooFast() {
+        loginPage.open();
+        loginPage.login("test-user@localhost", "password");
+
+        verifyEmailPage.assertCurrent();
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+
+        verifyEmailPage.clickResendEmail();
+        assertThat(verifyEmailPage.getFeedbackText(), Matchers.containsString("You must wait"));
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+
+        try {
+            setTimeOffset(40);
+            verifyEmailPage.clickResendEmail();
+            Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        } finally {
+            setTimeOffset(0);
+        }
+
+    }
+
+    @Test
+    public void verifyEmailResendWithRefreshes() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -279,6 +401,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
           .assertEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
         driver.navigate().refresh();
@@ -291,7 +414,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         Assert.assertEquals(2, greenMail.getReceivedMessages().length);
 
         MimeMessage message = greenMail.getLastReceivedMessage();
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         driver.navigate().to(verificationUrl.trim());
 
@@ -309,11 +432,12 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResendFirstStillValidEvenWithSecond() throws IOException, MessagingException {
+    public void verifyEmailResendFirstStillValidEvenWithSecond() throws IOException {
         // Email verification can be performed any number of times
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
@@ -321,7 +445,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message1 = greenMail.getReceivedMessages()[0];
 
-        String verificationUrl1 = getPasswordResetEmailLink(message1);
+        String verificationUrl1 = getEmailLink(message1);
 
         driver.navigate().to(verificationUrl1.trim());
 
@@ -330,20 +454,25 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message2 = greenMail.getReceivedMessages()[1];
 
-        String verificationUrl2 = getPasswordResetEmailLink(message2);
+        String verificationUrl2 = getEmailLink(message2);
 
+        events.clear();
         driver.navigate().to(verificationUrl2.trim());
-
+        events.expectRequiredAction(EventType.VERIFY_EMAIL)
+                .error(Errors.EMAIL_ALREADY_VERIFIED)
+                .detail(Details.REDIRECT_URI, Matchers.any(String.class))
+                .assertEvent();
         infoPage.assertCurrent();
-        Assert.assertEquals("You are already logged in.", infoPage.getInfo());
+        Assert.assertEquals("Your email address has been verified already.", infoPage.getInfo());
     }
 
     @Test
-    public void verifyEmailResendFirstAndSecondStillValid() throws IOException, MessagingException {
+    public void verifyEmailResendFirstAndSecondStillValid() throws IOException {
         // Email verification can be performed any number of times
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
@@ -351,29 +480,44 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message1 = greenMail.getReceivedMessages()[0];
 
-        String verificationUrl1 = getPasswordResetEmailLink(message1);
+        String verificationUrl1 = getEmailLink(message1);
 
         driver.navigate().to(verificationUrl1.trim());
 
-        appPage.assertCurrent();
-        accountPage.setAuthRealm(AuthRealm.TEST);
-        accountPage.navigateTo();
-        accountPage.logOut();
+        AccountHelper.logout(testRealm(), "test-user@localhost");
 
         MimeMessage message2 = greenMail.getReceivedMessages()[1];
 
-        String verificationUrl2 = getPasswordResetEmailLink(message2);
+        String verificationUrl2 = getEmailLink(message2);
 
         driver.navigate().to(verificationUrl2.trim());
 
-        proceedPage.assertCurrent();
-        proceedPage.clickProceedLink();
-        infoPage.assertCurrent();
-        assertEquals("Your email address has been verified.", infoPage.getInfo());
+        assertEquals("Your email address has been verified already.", infoPage.getInfo());
     }
 
     @Test
-    public void verifyEmailNewBrowserSession() throws IOException, MessagingException {
+    public void verifyEmailResendAndVerifyWithLatestLink() throws IOException {
+        // Email verification can be performed any number of times
+        loginPage.open();
+        loginPage.login("test-user@localhost", "password");
+        clearCooldownForUser();
+        verifyEmailPage.clickResendEmail();
+        verifyEmailPage.assertCurrent();
+        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        MimeMessage message1 = greenMail.getReceivedMessages()[0];
+        String verificationUrl1 = getEmailLink(message1);
+
+        MimeMessage message2 = greenMail.getReceivedMessages()[1];
+        String verificationUrl2 = getEmailLink(message2);
+        driver.navigate().to(verificationUrl2.trim());
+        appPage.assertCurrent();
+
+        driver.navigate().to(verificationUrl1.trim());
+        assertEquals("Your email address has been verified already.", infoPage.getInfo());
+    }
+
+    @Test
+    public void verifyEmailNewBrowserSession() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -383,7 +527,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         AssertEvents.ExpectedEvent emailEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL).detail("email", "test-user@localhost");
         EventRepresentation sendEvent = emailEvent.assertEvent();
@@ -412,7 +556,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailInvalidKeyInVerficationLink() throws IOException, MessagingException {
+    public void verifyEmailInvalidKeyInVerficationLink() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -422,7 +566,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         verificationUrl = KeycloakUriBuilder.fromUri(verificationUrl).replaceQueryParam(Constants.KEY, "foo").build().toString();
 
@@ -443,7 +587,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCode() throws IOException, MessagingException {
+    public void verifyEmailExpiredCode() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -453,7 +597,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         events.poll();
 
@@ -479,9 +623,9 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCodedPerActionLifespan() throws IOException, MessagingException {
+    public void verifyEmailExpiredCodedPerActionLifespan() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         realmRep.setAttributes(UserActionTokenBuilder.create().verifyEmailLifespan(60).build());
         testRealm().update(realmRep);
@@ -495,7 +639,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         events.poll();
 
@@ -523,9 +667,9 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCodedPerActionMultipleTimeouts() throws IOException, MessagingException {
+    public void verifyEmailExpiredCodedPerActionMultipleTimeouts() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
         realmRep.setAttributes(UserActionTokenBuilder.create().verifyEmailLifespan(60).resetCredentialsLifespan(300).build());
@@ -540,7 +684,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         events.poll();
 
@@ -568,7 +712,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCodeAndExpiredSession() throws IOException, MessagingException {
+    public void verifyEmailExpiredCodeAndExpiredSession() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -578,7 +722,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         events.poll();
 
@@ -606,22 +750,22 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
 
-    public static String getPasswordResetEmailLink(MimeMessage message) throws IOException, MessagingException {
+    public static String getEmailLink(MimeMessage message) throws IOException {
         return MailUtils.getPasswordResetEmailLink(message);
     }
 
     // https://issues.jboss.org/browse/KEYCLOAK-5861
     @Test
-    public void verifyEmailNewBrowserSessionWithClientRedirect() throws IOException, MessagingException {
+    public void verifyEmailNewBrowserSessionWithClientRedirect() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
           .setEmailVerified(false)
           .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
             Assert.assertEquals(1, greenMail.getReceivedMessages().length);
             MimeMessage message = greenMail.getLastReceivedMessage();
 
-            String verificationUrl = getPasswordResetEmailLink(message);
+            String verificationUrl = getEmailLink(message);
 
             driver.manage().deleteAllCookies();
 
@@ -632,19 +776,15 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
             infoPage.assertCurrent();
             assertEquals("Your account has been updated.", infoPage.getInfo());
 
-            // Now log into account page
-            accountPage.setAuthRealm(testRealm().toRepresentation().getRealm());
-            accountPage.navigateTo();
-
-            loginPage.assertCurrent();
-            loginPage.login("test-user@localhost", "password");
-
-            accountPage.assertCurrent();
+            // Now login to app
+            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+            testAppHelper.login("test-user@localhost", "password");
+            appPage.assertCurrent();
         }
     }
 
     @Test
-    public void verifyEmailNewBrowserSessionPreserveClient() throws IOException, MessagingException {
+    public void verifyEmailNewBrowserSessionPreserveClient() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -654,7 +794,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         // open link in the second browser without the session
         driver2.navigate().to(verificationUrl.trim());
@@ -677,14 +817,13 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailDuringAuthFlow() throws IOException, MessagingException {
+    public void verifyEmailDuringAuthFlow() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(false)
                 .setRequiredActions(RequiredAction.VERIFY_EMAIL)
                 .update()) {
-            accountPage.setAuthRealm(testRealm().toRepresentation().getRealm());
-            accountPage.navigateTo();
 
+            loginPage.open();
             loginPage.assertCurrent();
             loginPage.login("test-user@localhost", "password");
 
@@ -693,34 +832,32 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
             Assert.assertEquals(1, greenMail.getReceivedMessages().length);
             MimeMessage message = greenMail.getLastReceivedMessage();
 
-            String verificationUrl = getPasswordResetEmailLink(message);
+            String verificationUrl = getEmailLink(message);
 
             driver.navigate().to(verificationUrl.trim());
 
-            accountPage.assertCurrent();
+            appPage.assertCurrent();
         }
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowFirstClickLink() throws IOException, MessagingException {
+    public void verifyEmailDuringAuthFlowFirstClickLink() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(false)
                 .setRequiredActions(RequiredAction.VERIFY_EMAIL)
                 .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
             Assert.assertEquals(1, greenMail.getReceivedMessages().length);
             MimeMessage message = greenMail.getLastReceivedMessage();
 
-            String verificationUrl = getPasswordResetEmailLink(message);
+            String verificationUrl = getEmailLink(message);
 
             driver.manage().deleteAllCookies();
 
             driver.navigate().to(verificationUrl);
 
-            accountPage.setAuthRealm(testRealm().toRepresentation().getRealm());
-            accountPage.navigateTo();
-
+            loginPage.open();
             loginPage.assertCurrent();
             loginPage.login("test-user@localhost", "password");
 
@@ -729,75 +866,68 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailClickLinkRequiredActionsCleared() throws IOException, MessagingException {
+    public void verifyEmailClickLinkRequiredActionsCleared() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(true)
                 .setRequiredActions()
                 .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
             Assert.assertEquals(1, greenMail.getReceivedMessages().length);
             MimeMessage message = greenMail.getLastReceivedMessage();
 
-            String verificationUrl = getPasswordResetEmailLink(message);
+            String verificationUrl = getEmailLink(message);
 
             driver.manage().deleteAllCookies();
 
             driver.navigate().to(verificationUrl);
 
-            accountPage.setAuthRealm(testRealm().toRepresentation().getRealm());
-            accountPage.navigateTo();
-
+            loginPage.open();
             loginPage.assertCurrent();
             loginPage.login("test-user@localhost", "password");
 
-            accountPage.assertCurrent();
+            appPage.assertCurrent();
         }
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowAfterLogout() throws IOException, MessagingException {
+    public void verifyEmailDuringAuthFlowAfterLogout() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(true)
                 .update()) {
-            accountPage.setAuthRealm(testRealm().toRepresentation().getRealm());
-            accountPage.navigateTo();
 
-            loginPage.assertCurrent();
-            loginPage.login("test-user@localhost", "password");
+            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+            testAppHelper.login("test-user@localhost", "password");
+            appPage.assertCurrent();
 
-            accountPage.assertCurrent();
-
-            accountPage.logOut();
-            loginPage.assertCurrent();
+            testAppHelper.logout();
+            appPage.assertCurrent();
 
             verifyEmailDuringAuthFlow();
         }
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowAfterRefresh() throws IOException, MessagingException {
+    public void verifyEmailDuringAuthFlowAfterRefresh() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(true)
                 .update()) {
             final String testRealmName = testRealm().toRepresentation().getRealm();
-            accountPage.setAuthRealm(testRealmName);
 
             // Browser 1: Log in
-            accountPage.navigateTo();
-            loginPage.assertCurrent();
-            loginPage.login("test-user@localhost", "password");
-            accountPage.assertCurrent();
+            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+            testAppHelper.login("test-user@localhost", "password");
+            appPage.assertCurrent();
 
             // Browser 2: Log in
-            driver2.navigate().to(accountPage.buildUri().toString());
+            driver2.navigate().to(oauth.loginForm().build());
 
             assertThat(driver2.getTitle(), is("Sign in to " + testRealmName));
             driver2.findElement(By.id("username")).sendKeys("test-user@localhost");
             driver2.findElement(By.id("password")).sendKeys("password");
             driver2.findElement(By.id("password")).submit();
 
-            assertThat(driver2.getCurrentUrl(), Matchers.startsWith(accountPage.buildUri().toString()));
+            assertThat(driver2.getCurrentUrl(), Matchers.startsWith(OAuthClient.APP_AUTH_ROOT));
 
             // Admin: set required action to VERIFY_EMAIL
             try (Closeable u1 = new UserAttributeUpdater(testRealm().users().get(testUserId))
@@ -806,17 +936,15 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
                     .update()) {
                 // Browser 2: Refresh window
                 driver2.navigate().refresh();
-                assertThat(driver2.getCurrentUrl(), Matchers.startsWith(accountPage.buildUri().toString()));
+                assertThat(driver2.getCurrentUrl(), Matchers.startsWith(OAuthClient.APP_AUTH_ROOT));
 
                 // Browser 1: Logout
-                accountPage.logOut();
+                testAppHelper.logout();
+                appPage.assertCurrent();
 
-                // Browser 1: Go to account page
-                accountPage.navigateTo();
 
                 // Browser 1: Log in
-                loginPage.assertCurrent();
-                loginPage.login("test-user@localhost", "password");
+                testAppHelper.login("test-user@localhost", "password");
 
                 verifyEmailPage.assertCurrent();
 
@@ -824,7 +952,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
                 Assert.assertEquals(1, greenMail.getReceivedMessages().length);
                 MimeMessage message = greenMail.getLastReceivedMessage();
 
-                String verificationUrl = getPasswordResetEmailLink(message);
+                String verificationUrl = getEmailLink(message);
 
                 driver2.navigate().to(verificationUrl.trim());
 
@@ -837,24 +965,21 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
                 assertThat(driver2.getPageSource(), Matchers.containsString("kc-info-message"));
                 assertThat(driver2.getPageSource(), Matchers.containsString("Your email address has been verified."));
 
-                // Browser 1: Expect land back to account after refresh
+                // Browser 1: Expect land back to app after refresh
                 driver.navigate().refresh();
-                accountPage.assertCurrent();
+                appPage.assertCurrent();
             }
         }
     }
 
     @Test
-    public void verifyEmailWhileLoggedIn() throws IOException, MessagingException {
+    public void verifyEmailWhileLoggedIn() throws IOException {
         UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(true).update();
 
-        final String testRealmName = testRealm().toRepresentation().getRealm();
-        accountPage.setAuthRealm(testRealmName);
-        oauth.realm(testRealmName).clientId("account").redirectUri(getAuthServerRoot() + "realms/" + testRealmName + "/account");
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
-        accountPage.assertCurrent();
+        appPage.assertCurrent();
 
         userAttributeUpdater.setEmailVerified(false).setRequiredActions(RequiredAction.VERIFY_EMAIL).update();
 
@@ -865,38 +990,37 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         Assert.assertEquals(1, greenMail.getReceivedMessages().length);
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         // confirm
         driver.navigate().to(verificationUrl);
 
-        // back to account, already logged in
-        accountPage.assertCurrent();
+        // back to app, already logged in
+        appPage.assertCurrent();
 
         // email should be verified and required actions empty
         UserRepresentation user = testRealm().users().get(testUserId).toRepresentation();
-        Assert.assertTrue(user.isEmailVerified());
-        Assert.assertThat(user.getRequiredActions(), Matchers.empty());
+        assertTrue(user.isEmailVerified());
+        assertThat(user.getRequiredActions(), Matchers.empty());
     }
 
     @Test
-    public void verifyEmailViaAuthSessionWhileLoggedIn() throws IOException, MessagingException {
+    public void verifyEmailViaAuthSessionWhileLoggedIn() throws IOException {
         Assume.assumeTrue("Works only on auth-server-undertow",
                 AuthServerTestEnricher.AUTH_SERVER_CONTAINER.equals(AuthServerTestEnricher.AUTH_SERVER_CONTAINER_DEFAULT));
 
         UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(false).update();
 
-        final String testRealmName = testRealm().toRepresentation().getRealm();
-        accountPage.setAuthRealm(testRealmName);
-        oauth.realm(testRealmName).clientId("account").redirectUri(getAuthServerRoot() + "realms/" + testRealmName + "/account");
         loginPage.open();
 
         String authSessionId = AuthenticationSessionFailoverClusterTest.getAuthSessionCookieValue(driver);
         String realmId = testRealm().toRepresentation().getId();
         testingClient.server().run(session -> {
             RealmModel realm = session.realms().getRealm(realmId);
-            RootAuthenticationSessionModel ras = session.authenticationSessions().getRootAuthenticationSession(realm, authSessionId);
+            session.getContext().setRealm(realm);
+            RootAuthenticationSessionModel ras = session.authenticationSessions()
+                    .getRootAuthenticationSession(realm, new AuthenticationSessionManager(session).decodeBase64AndValidateSignature(authSessionId));
             assertThat("Expecting single auth session", ras.getAuthenticationSessions().keySet(), Matchers.hasSize(1));
             ras.getAuthenticationSessions().forEach((id, as) -> as.addRequiredAction(RequiredAction.VERIFY_EMAIL));
         });
@@ -907,31 +1031,28 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         Assert.assertEquals(1, greenMail.getReceivedMessages().length);
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         // confirm
         driver.navigate().to(verificationUrl);
 
-        // back to account, already logged in
-        accountPage.assertCurrent();
+        // back to app, already logged in
+        appPage.assertCurrent();
 
         // email should be verified and required actions empty
         UserRepresentation user = testRealm().users().get(testUserId).toRepresentation();
-        Assert.assertTrue(user.isEmailVerified());
-        Assert.assertThat(user.getRequiredActions(), Matchers.empty());
+        assertTrue(user.isEmailVerified());
+        assertThat(user.getRequiredActions(), Matchers.empty());
     }
 
     @Test
-    public void verifyEmailInNewBrowserWhileLoggedInFirstBrowser() throws IOException, MessagingException {
+    public void verifyEmailInNewBrowserWhileLoggedInFirstBrowser() throws IOException {
         UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(true).update();
 
-        final String testRealmName = testRealm().toRepresentation().getRealm();
-        accountPage.setAuthRealm(testRealmName);
-        oauth.realm(testRealmName).clientId("account").redirectUri(getAuthServerRoot() + "realms/" + testRealmName + "/account");
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
-        accountPage.assertCurrent();
+        appPage.assertCurrent();
 
         userAttributeUpdater.setEmailVerified(false).setRequiredActions(RequiredAction.VERIFY_EMAIL).update();
 
@@ -942,7 +1063,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         Assert.assertEquals(1, greenMail.getReceivedMessages().length);
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         // confirm in the second browser
         driver2.navigate().to(verificationUrl);
@@ -956,9 +1077,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         assertThat(driver2.getPageSource(), Matchers.containsString("kc-info-message"));
         assertThat(driver2.getPageSource(), Matchers.containsString("Your email address has been verified."));
 
-        final WebElement backToApplicationLink = driver2.findElement(By.linkText("« Back to Application"));
-        assertThat(backToApplicationLink, Matchers.notNullValue());
-        backToApplicationLink.click();
+        driver2.navigate().to(oauth.loginForm().build());
 
         // login page should be shown in the second browser
         assertThat(driver2.getPageSource(), Matchers.containsString("kc-login"));
@@ -966,21 +1085,19 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         // email should be verified and required actions empty
         UserRepresentation user = testRealm().users().get(testUserId).toRepresentation();
-        Assert.assertTrue(user.isEmailVerified());
-        Assert.assertThat(user.getRequiredActions(), Matchers.empty());
+        assertTrue(user.isEmailVerified());
+        assertThat(user.getRequiredActions(), Matchers.empty());
 
-        // after refresh in the first browser the account console should be shown
+        // after refresh in the first browser the app should be shown
         driver.navigate().refresh();
-        accountPage.assertCurrent();
+        appPage.assertCurrent();
     }
 
     @Test
-    public void verifyEmailExpiredRegistration() throws IOException, MessagingException {
+    public void verifyEmailExpiredRegistration() throws IOException {
         final String COMMON_ATTR = "verifyEmailRegistrationUser";
 
-        String appInitiatedRegisterUrl = oauth.getLoginFormUrl();
-        appInitiatedRegisterUrl = appInitiatedRegisterUrl.replace("openid-connect/auth", "openid-connect/registrations");
-        driver.navigate().to(appInitiatedRegisterUrl);
+        driver.navigate().to(oauth.registrationForm().build());
 
         registerPage.assertCurrent();
         registerPage.register(COMMON_ATTR, COMMON_ATTR, COMMON_ATTR + "@" + COMMON_ATTR, COMMON_ATTR, COMMON_ATTR, COMMON_ATTR);
@@ -991,7 +1108,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         MimeMessage message = greenMail.getLastReceivedMessage();
 
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         try {
             setTimeOffset(360);
@@ -1016,7 +1133,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         assertEquals(1, greenMail.getReceivedMessages().length);
 
         MimeMessage message = greenMail.getReceivedMessages()[0];
-        String verificationUrl = getPasswordResetEmailLink(message);
+        String verificationUrl = getEmailLink(message);
 
         UserResource user = testRealm().users().get(testUserId);
         UserRepresentation userRep = user.toRepresentation();
@@ -1026,5 +1143,75 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         driver.navigate().to(verificationUrl.trim());
         errorPage.assertCurrent();
         assertEquals("The link you clicked is an old stale link and is no longer valid. Maybe you have already verified your email.", errorPage.getError());
+    }
+
+    @Test
+    public void actionTokenWithInvalidRequiredActions() throws IOException {
+        // Send email with required action
+        testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.UPDATE_EMAIL.name()));
+
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        MimeMessage message = greenMail.getLastReceivedMessage();
+
+        MailUtils.EmailBody body = MailUtils.getBody(message);
+        assertThat(body, notNullValue());
+
+        final String link = MailUtils.getLink(body.getText());
+        assertThat(link, notNullValue());
+
+        // Disable feature and the required action UPDATE_EMAIL provider is not present
+        testingClient.disableFeature(Profile.Feature.UPDATE_EMAIL);
+
+        driver.navigate().to(link);
+
+        errorPage.assertCurrent();
+
+        // Required action included in the action token is not valid anymore, because we don't know the provider for it
+        assertThat(errorPage.getError(), is("Required actions included in the link are not valid"));
+    }
+
+    @Test
+    public void testVerifyEmailWithNoEmailAndVerifyProfile() throws Exception {
+        UserResource user = testRealm().users().get(testUserId);
+        UserRepresentation userRep = user.toRepresentation();
+        userRep.setEmail("");
+        user.update(userRep);
+
+        loginPage.open();
+        loginPage.login("test-user@localhost", "password");
+
+        // verify profile should be presented first as the verify email is ignored without email
+        verifyProfilePage.assertCurrent();
+        events.expectRequiredAction(EventType.VERIFY_PROFILE)
+                .user(testUserId)
+                .detail(Details.FIELDS_TO_UPDATE, UserModel.EMAIL)
+                .assertEvent();
+
+        verifyProfilePage.updateEmail("test-user@localhost", "test-user", "test-user");
+
+        verifyEmailPage.assertCurrent();
+
+        events.expectRequiredAction(EventType.UPDATE_PROFILE)
+                .user(testUserId)
+                .detail(Details.UPDATED_EMAIL, "test-user@localhost")
+                .assertEvent();
+
+        // verify email is presented now
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+
+        final MimeMessage message = greenMail.getLastReceivedMessage();
+
+        final String verificationUrl = getEmailLink(message);
+
+        // confirm
+        driver.navigate().to(verificationUrl);
+
+        // back to app, already logged in
+        appPage.assertCurrent();
+
+        // email should be verified and required actions empty
+        userRep = user.toRepresentation();
+        assertTrue(userRep.isEmailVerified());
+        assertThat(userRep.getRequiredActions(), Matchers.empty());
     }
 }
