@@ -23,10 +23,8 @@ import org.junit.Test;
 import org.keycloak.OAuth2Constants;
 import org.keycloak.admin.client.resource.ClientResource;
 import org.keycloak.admin.client.resource.ClientScopeResource;
-import org.keycloak.common.Profile;
 import org.keycloak.common.util.MultivaluedHashMap;
 import org.keycloak.events.Details;
-import org.keycloak.events.EventType;
 import org.keycloak.models.ClientScopeModel;
 import org.keycloak.models.utils.KeycloakModelUtils;
 import org.keycloak.protocol.oidc.OIDCLoginProtocol;
@@ -44,20 +42,22 @@ import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.keycloak.testsuite.Assert;
 import org.keycloak.testsuite.admin.ApiUtil;
-import org.keycloak.testsuite.arquillian.annotation.DisableFeature;
 import org.keycloak.testsuite.pages.OAuthGrantPage;
 import org.keycloak.testsuite.util.ClientManager;
-import org.keycloak.testsuite.util.OAuthClient;
+import org.keycloak.testsuite.util.oauth.AccessTokenResponse;
 import org.keycloak.testsuite.util.RoleBuilder;
 import org.keycloak.testsuite.util.UserBuilder;
+import org.keycloak.testsuite.util.AccountHelper;
 
-import javax.ws.rs.NotFoundException;
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.NotFoundException;
+import jakarta.ws.rs.core.Response;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.Assert.assertEquals;
+import static org.keycloak.testsuite.auth.page.AuthRealm.TEST;
 
 /**
  * Test for OAuth2 'scope' parameter and for some other aspects of client scopes
@@ -66,12 +66,12 @@ import static org.junit.Assert.assertEquals;
  */
 public class OIDCScopeTest extends AbstractOIDCScopeTest {
 
-    private static String userId = KeycloakModelUtils.generateId();
+    private static String userId;
 
     @Override
     public void configureTestRealm(RealmRepresentation testRealm) {
         UserRepresentation user = UserBuilder.create()
-                .id(userId)
+                .id(KeycloakModelUtils.generateId())
                 .username("john")
                 .enabled(true)
                 .email("john@email.cz")
@@ -148,12 +148,17 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         testRealm.getUsers().add(user);
     }
 
+    @Override
+    public void importTestRealms() {
+        super.importTestRealms();
+        userId = adminClient.realm("test").users().search("john", true).get(0).getId();
+    }
+
     @Before
     public void clientConfiguration() {
         ClientManager.realm(adminClient.realm("test")).clientId("test-app").directAccessGrant(true);
         oauth.clientId("test-app");
         oauth.scope(null);
-        oauth.maxAge(null);
     }
 
     @After
@@ -165,7 +170,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         }
     }
 
-
+    
     @Test
     public void testBuiltinOptionalScopes() throws Exception {
         // Login. Assert that just 'profile' and 'email' data are there. 'Address' and 'phone' not
@@ -186,7 +191,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         assertMicroprofile(tokens.accessToken, false);
 
         // Logout
-        oauth.doLogout(tokens.refreshToken, "password");
+        oauth.doLogout(tokens.refreshToken);
         events.expectLogout(idToken.getSessionState())
                 .client("test-app")
                 .user(userId)
@@ -216,7 +221,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
             Assert.assertEquals("John", idToken.getGivenName());
             Assert.assertEquals("Doe", idToken.getFamilyName());
             Assert.assertEquals("John Doe", idToken.getName());
-            Assert.assertEquals(new Long(1643282255L),idToken.getUpdatedAt());
+            Assert.assertEquals(Long.valueOf(1643282255L),idToken.getUpdatedAt());
         } else {
             Assert.assertNull(idToken.getPreferredUsername());
             Assert.assertNull(idToken.getGivenName());
@@ -300,7 +305,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         assertPhone(idToken, false);
 
         // Logout
-        oauth.doLogout(tokens.refreshToken, "password");
+        oauth.doLogout(tokens.refreshToken);
         events.expectLogout(idToken.getSessionState())
                 .client("test-app")
                 .user(userId)
@@ -336,7 +341,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         addressScope.update(addressScopeRep);
 
         oauth.clientId("third-party");
-        oauth.doLoginGrant("john", "password");
+        oauth.doLogin("john", "password");
 
         grantPage.assertCurrent();
         grantPage.assertGrants(OAuthGrantPage.PROFILE_CONSENT_TEXT, OAuthGrantPage.EMAIL_CONSENT_TEXT, OAuthGrantPage.ROLES_CONSENT_TEXT);
@@ -357,7 +362,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         assertPhone(idToken, false);
 
         // Logout
-        oauth.doLogout(tokens.refreshToken, "password");
+        oauth.doLogout(tokens.refreshToken);
         events.expectLogout(idToken.getSessionState())
                 .client("third-party")
                 .user(userId)
@@ -365,7 +370,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
 
         // Login with optional scopes. Grant screen should have just "phone"
         oauth.scope("openid address phone");
-        oauth.doLoginGrant("john", "password");
+        oauth.doLogin("john", "password");
 
         grantPage.assertCurrent();
         grantPage.assertGrants(OAuthGrantPage.PHONE_CONSENT_TEXT);
@@ -401,7 +406,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
 
         // Login. Client should be displayed on consent screen
         oauth.clientId("third-party");
-        oauth.doLoginGrant("john", "password");
+        oauth.doLogin("john", "password");
 
         grantPage.assertCurrent();
         grantPage.assertGrants(OAuthGrantPage.PROFILE_CONSENT_TEXT, OAuthGrantPage.EMAIL_CONSENT_TEXT, OAuthGrantPage.ROLES_CONSENT_TEXT, "ThirdParty permissions");
@@ -445,7 +450,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
 
         // Login. ConsentTexts are empty for the client and for the "profile" scope, so it should fallback to name/clientId
         oauth.clientId("third-party");
-        oauth.doLoginGrant("john", "password");
+        oauth.doLogin("john", "password");
 
         grantPage.assertCurrent();
         grantPage.assertGrants("profile", OAuthGrantPage.EMAIL_CONSENT_TEXT, OAuthGrantPage.ROLES_CONSENT_TEXT, "third-party");
@@ -461,11 +466,10 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
 
 
     @Test
-    @DisableFeature(value = Profile.Feature.ACCOUNT2, skipRestart = true) // TODO remove this (KEYCLOAK-16228)
     public void testRefreshTokenWithConsentRequired() {
         // Login with consentRequired
         oauth.clientId("third-party");
-        oauth.doLoginGrant("john", "password");
+        oauth.doLogin("john", "password");
 
         grantPage.assertCurrent();
         grantPage.assertGrants(OAuthGrantPage.PROFILE_CONSENT_TEXT, OAuthGrantPage.EMAIL_CONSENT_TEXT, OAuthGrantPage.ROLES_CONSENT_TEXT);
@@ -487,7 +491,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         assertPhone(idToken, false);
 
         // Ensure that I can refresh token
-        OAuthClient.AccessTokenResponse refreshResponse = oauth.doRefreshTokenRequest(tokens.refreshToken, "password");
+        AccessTokenResponse refreshResponse = oauth.doRefreshTokenRequest(tokens.refreshToken);
         Assert.assertEquals(200, refreshResponse.getStatusCode());
         idToken = oauth.verifyIDToken(refreshResponse.getIdToken());
 
@@ -502,21 +506,17 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
                 .assertEvent();
 
         // Go to applications in account mgmt and revoke consent
-        accountAppsPage.open();
         events.clear();
-        accountAppsPage.revokeGrant("third-party");
-        events.expect(EventType.REVOKE_GRANT)
-                .client("account")
-                .user(userId)
-                .detail(Details.REVOKED_CLIENT, "third-party")
-                .assertEvent();
+        AccountHelper.revokeConsents(adminClient.realm(TEST), "john", "third-party");
+        List<Map<String, Object>> userConsents = AccountHelper.getUserConsents(adminClient.realm(TEST), "john");
+        Assert.assertEquals(userConsents.size(), 0);
 
         // Ensure I can't refresh anymore
-        refreshResponse = oauth.doRefreshTokenRequest(refreshResponse.getRefreshToken(), "password");
+        refreshResponse = oauth.doRefreshTokenRequest(refreshResponse.getRefreshToken());
         assertEquals(400, refreshResponse.getStatusCode());
         events.expectRefresh(refreshToken1.getId(), idToken.getSessionState())
                 .client("third-party")
-                .user(userId)
+                .user((String) null)
                 .removeDetail(Details.TOKEN_ID)
                 .removeDetail(Details.REFRESH_TOKEN_ID)
                 .removeDetail(Details.UPDATED_REFRESH_TOKEN_ID)
@@ -578,14 +578,15 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         Assert.assertTrue(tokens2.accessToken.getRealmAccess().isUserInRole("role-2"));
 
         // Ensure I can refresh refreshToken1. Just role1 is present
-        OAuthClient.AccessTokenResponse refreshResponse1 = oauth.doRefreshTokenRequest(tokens1.refreshToken, "password");
+        oauth.scope(null);
+        AccessTokenResponse refreshResponse1 = oauth.doRefreshTokenRequest(tokens1.refreshToken);
         Assert.assertEquals(200, refreshResponse1.getStatusCode());
         AccessToken accessToken1 = oauth.verifyToken(refreshResponse1.getAccessToken());
         Assert.assertTrue(accessToken1.getRealmAccess().isUserInRole("role-1"));
         Assert.assertFalse(accessToken1.getRealmAccess().isUserInRole("role-2"));
 
         // Ensure I can refresh refreshToken2. Just role2 is present
-        OAuthClient.AccessTokenResponse refreshResponse2 = oauth.doRefreshTokenRequest(tokens2.refreshToken, "password");
+        AccessTokenResponse refreshResponse2 = oauth.doRefreshTokenRequest(tokens2.refreshToken);
         Assert.assertEquals(200, refreshResponse2.getStatusCode());
         AccessToken accessToken2 = oauth.verifyToken(refreshResponse2.getAccessToken());
         Assert.assertFalse(accessToken2.getRealmAccess().isUserInRole("role-1"));
@@ -663,7 +664,7 @@ public class OIDCScopeTest extends AbstractOIDCScopeTest {
         Tokens tokens = sendTokenRequest(loginEvent, userId,"openid email profile " + expectedRoleScopes, "test-app");
         Assert.assertNames(tokens.accessToken.getRealmAccess().getRoles(), expectedRoles);
 
-        oauth.doLogout(tokens.refreshToken, "password");
+        oauth.doLogout(tokens.refreshToken);
         events.expectLogout(tokens.idToken.getSessionState())
                 .client("test-app")
                 .user(userId)
